# wraith

./: Cargo.toml  Dockerfile.daemon  Dockerfile.server  README.md  docker-compose.yml  lib.rs
scripts/: test_events.sh
wraith-common/: Cargo.toml
wraith-daemon/: Cargo.toml
wraith-daemon/src/: buffer.rs  config.rs  main.rs  monitor.rs  socket.rs  writer.rs
wraith-server/: Cargo.toml
wraith-server/src/: config.rs  main.rs
wraith-server/src/clickhouse/: consumer.rs  mod.rs
wraith-server/src/models/: mod.rs  stored.rs
wraith-server/src/nats/: mod.rs  publisher.rs
wraith-server/src/routes/: health.rs  ingest.rs  mod.rs
