[workspace]
resolver = "2"
members = [
    "wraith-common",
    "wraith-daemon",
    "wraith-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jason Boykin <jason@autonops.io>"]
license = "MIT"
repository = "https://github.com/dark5eid2021/wraith"

[workspace.dependencies]
# Shared across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
